@@ -297,6 +297,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Send new password e-mail in users preference language
 * LanguageConverter now support nested using of manual convert syntax like "-{-{}-}-"
 * (bug 16281) Show copyright system message on special pages
+* Upload license preview now uses the API instead of action=ajax
 
 === Bug fixes in 1.16 ===
 
